--- a/nano/static/src/sass/_dashboard.scss
+++ b/nano/static/src/sass/_dashboard.scss
@@ -7,7 +7,6 @@
   }
 
   .row {
-    @include container;
     margin-top: 10px;
   }
 
@@ -17,12 +16,12 @@
     @include border-radius(5px);
     @include box-shadow(0px 0px 2px #ccc); 
     border: 1px solid #aaa;
-    margin-right: 5px;
-    margin-left: 5px;
   }
 
   .span3 {
-    @include span-columns(4, 12);
+    width: flex-grid(4, 12);
+    float: left;
+    margin-left: 2px;
   }
 
   ul#stats {
