--- a/nano/static/src/sass/_layout.scss
+++ b/nano/static/src/sass/_layout.scss
@@ -18,6 +18,11 @@ body, html {
   }
 }
 
+.container {
+  width: 960px;
+  margin: 0 auto;
+}
+
 .header { 
   background-color: auto; 
   padding: 5px 0 10px 0;
@@ -67,7 +72,7 @@ body, html {
   }
 
   .workspace {
-    float: left;
+    float: left; 
     width: flex-grid(10);
     background-color: #ececec;
   }
