--- a/nano/templates/plain.html
+++ b/nano/templates/plain.html
@@ -4,7 +4,11 @@
     {% block head %}
     <meta charset="utf-8" />
     <title>Nanoinvoice - {{ page_title }}</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/nano/stylesheets/screen.css" />
+
+    {% assets 'css_global' %}
+      <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
+    {% endassets %}
+
     {% endblock %}
   </head>
   <body>
