--- a/nano/static/src/sass/pdf.scss
+++ b/nano/static/src/sass/pdf.scss
@@ -1,7 +1,7 @@
 // ---------------------------------------------------------------------------
 // Imports
 
-@import "base";
+@import "variables";
 
 /* -------------------------------------------------------------------------*/
 /* Layout */
