--- a/nano/static/src/sass/screen.scss
+++ b/nano/static/src/sass/screen.scss
@@ -18,5 +18,7 @@
 @import "invoice";
 @import "popup";
 @import "dashboard";
+@import "client";
+@import "payment";
 
 @import "invoice_themes/default";
