--- a/nano/templates/invoice/edit.html
+++ b/nano/templates/invoice/edit.html
@@ -18,6 +18,8 @@
         {{ render_input(form.currency_code) }}
         <div class="field">
           <button class="button normal" type="submit">Continue</button>
+           or 
+          <a href="javascript:history.back(-1);">Cancel</a>
         </div>
       </div>
     </form>
