--- a/nano/templates/settings/_subnav.html
+++ b/nano/templates/settings/_subnav.html
@@ -1,5 +1,5 @@
 
-<div class='subnav'>
+<div class="subnav">
   <ul>
     <li class='{{ 'active' if request.endpoint == 'settings.index' }}'><a href="{{ url_for('.index') }}">General</a></li>
     <li class='{{ 'active' if request.endpoint == 'settings.custom_fields' }}'><a href="{{ url_for('.custom_fields') }}">Custom fields</a></li>
