--- a/nano/static/src/sass/_layout.scss
+++ b/nano/static/src/sass/_layout.scss
@@ -7,20 +7,11 @@ body, html {
   background-image: url('/static/img/bg.png');
 }
 
-* {
-  @include box-sizing(border-box);
-}
-
 .plain {
   .header {
     margin-top: 2em;
     text-align: center;
   }
-}
-
-.container {
-  width: 960px;
-  margin: 0 auto;
 }
 
 .header { 
@@ -42,12 +33,14 @@ body, html {
   }
 }
 
+.content {
+  .workspace-inner {
+    padding: 10px;
+  }
+}
+
 .application {
   background-color: #fff;
-  
-  //@include box-shadow(0px 0px 4px #888);
-  @include border-radius(4px);
-  border: 1px solid #ccc;
   
   .top {
     @include panel-header;
@@ -57,30 +50,39 @@ body, html {
   }
 }
 
-.content {
-  clear: both;
-  @include pie-clearfix;
-  overflow: hidden;
-  
-  .sidebar {
-    float: left;
-    width: flex-grid(2);
-    @include border-radius(0 0 0 4px);
-    background-color: #E9F2F9;
-    border-right: 1px solid darken(#E9F2F9, 10%);
-    #padding { height: 2em; }
-  }
-
-  .workspace {
-    float: left; 
-    width: flex-grid(10);
-    background-color: #ececec;
-  }
-
-  .workspace-inner {
-    padding: 10px;
-  }
+.workspace {
+  background-color: #ccc;
 }
 
 .footer {
 }
+
+.subnav {
+  background-color: #efefef; 
+
+  ul li {
+    display: inline-block;
+    padding: 8px;
+    a {
+      text-decoration: none; 
+      color: #777777;
+      text-shadow: 0 1px 0 #fff;
+    }
+  }
+  
+  ul {
+    margin: 0;
+    border-bottom: 1px solid #ccc;
+  }
+
+  ul li.active {
+    font-weight: bold;
+  }
+}
+
+.first-create {
+  margin: 50px auto;
+  display: block;
+  text-align: center;
+}
+
