--- a/nano/templates/client/show.html
+++ b/nano/templates/client/show.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   
-  <div class="inner-workspace">
+  <div class="workspace-inner">
 
     <form class="create inline client" method="post" action="{{ url_for('.show', id=contact.id) }}">
       <div class="header">Client</div>
@@ -39,6 +39,30 @@
 
       </div>
     </form>
+
+    {% if invoices|length > 0 %}
+    <div class="data-list-wrapper invoice-data-list client-invoices"> 
+      <div class="data-list-header">
+        <div class="col due">Due date</div>
+        <div class="col ref">Reference No.</div>
+        <div class="col name">Client</div>
+        <div class="col total">Total</div>
+        <div class="col status">Status</div>
+      </div>
+      <div class="data-list">
+        {% for invoice in invoices %}
+          <div class="row" data-id="{{ invoice.id }}">
+            <div class="col due">{{ invoice.due_date.strftime('%d %B %Y') }}</div>
+            <div class="col ref">{{ invoice.reference }}</div>
+            <div class="col name">{{ invoice.contact.first_name }} {{ invoice.contact.last_name }}</div>
+            <div class="col total"><span class='currency-code'>{{ invoice.currency_code }}</span> {{ invoice.total|format_currency }}</div>
+            <div class="col status"><span class='label label-{{ invoice.get_status() }}'>{{ invoice.get_status() }}</span></div>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
+    {% endif %}
+
 
   </div>
 
