--- a/nano/templates/invoice/_controls.html
+++ b/nano/templates/invoice/_controls.html
@@ -1,19 +1,18 @@
 <div class="filters">
   <div class="left">
     {% if invoice.status == 'saved' %}
-      <a href="{{ url_for('.reopen', id=invoice.id) }}"><img src="/static/img/padlock_closed_icon&16.png"> Open</a>
+      <a href="{{ url_for('invoice.reopen', id=invoice.id) }}"><img src="/static/img/padlock_open_icon&16.png"> Re-open invoice</a>
     {% endif %}
     {% if invoice.status == 'draft' %}
-      <a href="{{ url_for('.save', id=invoice.id) }}"><img src="/static/img/padlock_open_icon&16.png"> Close</a></a>
-    <a href="{{ url_for('.edit', id=invoice.id) }}"><img src="/static/img/wrench_plus_2_icon&16.png"> Edit invoice</a>
+      <a href="{{ url_for('invoice.save', id=invoice.id) }}"><img src="/static/img/padlock_closed_icon&16.png"> Close invoice</a></a>
     {% endif %}
-    <a href="{{ url_for('.delete', id=invoice.id) }}"><img src="/static/img/trash_icon&16.png"> Delete</a>
+    <a href="{{ url_for('invoice.edit', id=invoice.id) }}"><img src="/static/img/wrench_plus_2_icon&16.png"> Edit</a>
+    <a href="{{ url_for('invoice.delete', id=invoice.id) }}"><img src="/static/img/trash_icon&16.png"> Delete</a>
   </div>
-  {% if invoice.status == 'saved' %}
   <div class="right">
-    <a href="{{ url_for('.print_invoice', id=invoice.id) }}"><img src="/static/img/print_icon&16.png"> Print</a>
-    <a href="{{ url_for('.email', id=invoice.id) }}"><img src="/static/img/mail_icon&16.png"> Email</a>
-    <a href="{{ url_for('.export', id=invoice.id) }}"><img src="/static/img/doc_export_icon&16.png"> Export</a>
+    <a href="{{ url_for('payment.create', invoice_id=invoice.id) }}"><img src="/static/img/payment.png"> Add payment</a>
+    <a href="{{ url_for('invoice.print_invoice', id=invoice.id) }}"><img src="/static/img/print_icon&16.png"> Print</a>
+    <a href="{{ url_for('invoice.email', id=invoice.id) }}"><img src="/static/img/mail_icon&16.png"> Email</a>
+    <a href="{{ url_for('invoice.export', id=invoice.id) }}"><img src="/static/img/doc_export_icon&16.png"> Export</a>
   </div>
-  {% endif %}
 </div>
