--- a/nano/templates/layout.html
+++ b/nano/templates/layout.html
@@ -25,55 +25,45 @@
     <div class="container">
       {% include '_flash.html' %}
       
-      <div class="header">
+      <div class="row header">
         <a href="/"><img src="/static/img/logo.png"></a>
-        
         {% if current_user.is_authenticated() %}
-        <div class="account">
-          <ul>
-            <li><a href="{{ url_for('account.index') }}">Your account</a></li>
-            <li><a href="{{ url_for('account.logout') }}">Log out</a></li>
-          </ul>
-        </div>
+          <div class="account">
+            <ul>
+              <li><a href="{{ url_for('account.index') }}">Your account</a></li>
+              <li><a href="{{ url_for('account.logout') }}">Log out</a></li>
+            </ul>
+          </div>
         {% else%}
-        <div class="account">
-          <ul>
-            <li><a href="{{ url_for('account.login') }}">Login</a></li>
-          </ul>
-        </div>
+          <div class="account">
+            <ul>
+              <li><a href="{{ url_for('account.login') }}">Login</a></li>
+            </ul>
+          </div>
         {% endif %}
       </div>
    
-      <div class="application">
-        <div class="top">
+      <div class="row application">
+        <div class="span2">
+          <ul class="nav nav-list">
+            <li class="nav-header">Menu</li>
+            <li><a href="{{ url_for('home.dashboard') }}"><img src="/static/img/dashboard.png" /> Dashboard</a></li>
+            <li><a href="{{ url_for('invoice.index') }}"><img src="/static/img/invoices.png" /> Invoices</a></li>
+            <li><a href="{{ url_for('payment.index') }}"><img src="/static/img/payments.png" /> Payments</a></li>
+            <li><a href="{{ url_for('client.index') }}"><img src="/static/img/customers.png" /> Clients</a></li>
+          </ul>
         </div>
-        <div class="content">
-          <div class="sidebar">
-            <h3>Menu</h3>
-            <ul class="menu">
-              <li><a href="{{ url_for('home.dashboard') }}"><img src="/static/img/dashboard.png" /> Dashboard</a></li>
-              <li><a href="{{ url_for('invoice.index') }}"><img src="/static/img/invoices.png" /> Invoices</a></li>
-              <li><a href="{{ url_for('payment.index') }}"><img src="/static/img/payments.png" /> Payments</a></li>
-              <li><a href="{{ url_for('client.index') }}"><img src="/static/img/customers.png" /> Clients</a></li>
-            </ul>
-            <div id="padding"></div>
-          </div>
-          <div class="workspace">
+        <div class="span10 workspace">
+          <div class="content">
             {% block content %}{% endblock %}
           </div>
         </div>
-        <div class="bottom">
-        </div>
       </div>
-      
-      <div class="footer">
-      
-      </div>
+
     </div>
     <script type="text/javascript">
       $(document).ready(function() { 
           $("select").select2();
-          layoutFix();
       });
     </script>
   </body>
