--- a/nano/templates/client/index.html
+++ b/nano/templates/client/index.html
@@ -10,6 +10,8 @@
     </div>
   </div>
 
+  <h1>Clients</h1>
+
   {% if contacts|length == 0 %}
     
   <p class="first-create">You have no contacts setup, <a href="{{ url_for('.create') }}">add one now</a></p>
