--- a/nano/templates/payment/index.html
+++ b/nano/templates/payment/index.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
+  
+  <h1>Payments</h1>
 
   <div class="data-list-wrapper payments-data-list"> 
     <div class="data-list-header">
