--- a/nano/static/src/sass/_shared.scss
+++ b/nano/static/src/sass/_shared.scss
@@ -1,10 +1,12 @@
+/* Basic elements */
 
 a img {
   vertical-align: middle;
 }
 
-.move-right {
-  float: right;
+.content > h1 {
+  padding-left: 10px;
+  font-size: 2em;
 }
 
 .filters {
@@ -40,6 +42,10 @@ a img {
   .right {
     float: right;
   }
+}
+
+.move-right {
+  float: right;
 }
 
 .first-create {
