--- a/nano/templates/settings/index.html
+++ b/nano/templates/settings/index.html
@@ -7,6 +7,18 @@
 
   <div class="workspace-inner">
     
+      <form class="setting inline create" method="post" action="">
+        <div class="header">General settings</div>
+        <div class="fields">
+          {{ render_input(form.email_template) }}
+
+          <div class="field">
+            <button class="btn btn-primary" type="submit">Update</button>
+          </div>
+
+        </div>
+      </form>
+
   </div>
 
 {% endblock %}
