Added gocardless payment method

--- a/nano/templates/portal.html
+++ b/nano/templates/portal.html
@@ -3,7 +3,7 @@
   <head>
     {% block head %}
     <meta charset="utf-8" />
-    <title>Nanoinvoice - {{ page_title }}</title>
+    <title>{{ page_title }}</title>
 
     {% assets 'css_global' %}
       <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
