--- a/nano/static/src/sass/_layout.scss
+++ b/nano/static/src/sass/_layout.scss
@@ -1,10 +1,14 @@
 
 body, html {
-  background-color: $bg-colour;
   font-size: $base-font-size;
   font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
   color: #333;
-  background-image: url('/static/img/bg.png');
+  background-color: #356AA0;
+  @include background-image(radial-gradient(center, ellipse cover, #356AA0 0%, lighten(#356AA0, 10%) 44%, lighten(#356AA0, 20%) 100%));
+}
+
+body, html * {
+  -webkit-font-smoothing: antialiased;
 }
 
 .plain {
@@ -28,27 +32,24 @@ body, html {
 
     a {
       text-decoration: none;
-      color: #666;
+      color: #fff;
     }
   }
 }
 
 .content {
-  
   .workspace-inner {
     padding: 10px;
   }
-
   min-height: 400px;
 }
 
 .application {
-  background-color: #ccc;
-  
+  background-color: #ececec;
+  @include border-radius(10px);
   .top {
     @include panel-header;
   }
-
   .bottom {
   }
 }
