--- a/nano/templates/invoice/index.html
+++ b/nano/templates/invoice/index.html
@@ -7,38 +7,36 @@
 
   {% if invoices|length == 0 %}
     
-  <p class="first-create">You haven't created any invoices yet. <a href="{{ url_for('.create') }}">Get started</a></p>
+    <p class="first-create">You haven't created any invoices yet. <a href="{{ url_for('.create') }}">Get started</a></p>
     
   {% else %}
-  
-  <div class="data-list-wrapper invoice-data-list"> 
-    <div class="data-list-header">
-      <div class="col due">Due date</div>
-      <div class="col ref">Reference No.</div>
-      <div class="col name">Client</div>
-      <div class="col total">Total</div>
-      <div class="col status">Status</div>
-    </div>
-    <div class="data-list">
+    <div class="workspace-inner">
+    <table class="table table-striped table-hover data-list">
+      <thead class="data-list-header">
+        <td class="col due">Due date</td>
+        <td class="col ref">Reference No.</td>
+        <td class="col name">Client</td>
+        <td class="col total">Total</td>
+        <td class="col status">Status</td>
+      </thead>
+     <tbody>
       {% for invoice in invoices %}
-        <div class="row" data-id="{{ invoice.id }}">
-          <div class="col due">{{ invoice.due_date.strftime('%d %B %Y') }}</div>
-          <div class="col ref">{{ invoice.reference }}</div>
-          <div class="col name">{{ invoice.contact.first_name }} {{ invoice.contact.last_name }}</div>
-          <div class="col total"><span class='currency-code'>{{ invoice.currency_code }}</span> {{ invoice.total|format_currency }}</div>
-          <div class="col status"><span class='label label-{{ invoice.get_status() }}'>{{ invoice.get_status() }}</span></div>
-        </div>
-      {% endfor %}
-    </div>
+          <tr data-id="{{ invoice.id }}">
+            <td class="col due">{{ invoice.due_date.strftime('%d %B %Y') }}</td>
+            <td class="col ref">{{ invoice.reference }}</td>
+            <td class="col name">{{ invoice.contact.first_name }} {{ invoice.contact.last_name }}</td>
+            <td class="col total"><span class='currency-code'>{{ invoice.currency_code }}</span> {{ invoice.total|format_currency }}</td>
+            <td class="col status"><span class='label label-{{ invoice.get_status() }}'>{{ invoice.get_status() }}</span></td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
-
   {% endif %}
-  
 
   <script type="text/javascript">
     $(document).ready(function() {
-      $('div.data-list > div.row').on('click', function(evt) {
-        console.log('hello');
+      $('table.data-list > tbody > tr').on('click', function(evt) {
         var el = $(this);
         window.location = '/invoice/' + el.data('id');
       });
