--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -4,53 +4,89 @@
 {% include 'invoice/_controls.html' %}
 
 <div id="manage" class="workspace-inner"> 
-
-    <div class="{{ invoice.status }}">
-      <div id="invoice" class="pagestyle">
-        <div id="invoice-header">
-          {% if company.logo %}
-          <img alt="Logo" class="logo screen" src="{{ url_for('file.download', location=company.logo.thumbnail.get_web_url()) }}">
-          {% endif %}
-          <div class="vcard" id="company-address">
-            {% include 'invoice/_company.html' %}
-          </div>
+  <div class="{{ invoice.status }}">
+    <div id="invoice">
+      <div id="invoice-header">
+        {% if company.logo %}
+        <img alt="Logo" class="logo screen" src="{{ url_for('file.download', location=company.logo.thumbnail.get_web_url()) }}">
+        {% endif %}
+        <div class="vcard" id="company-address">
+          {% include 'invoice/_company.html' %}
         </div>
-        <div id="invoice-info">
-          {% include 'invoice/_info.html' %}
-        </div>
-        <div class="vcard" id="client-details">
-          {% include 'invoice/_contact.html' %} 
-        </div>
-      
-        <table id="invoice-amount">
-          <thead>
-            <tr id="header_row">
-              <th class="quantity_th">Quantity</th>
-              <th class="left details_th">Details</th>
-              <th class="unitprice_th">Unit Price (£)</th>
-              <th class="salestax_th">Tax</th>
-              <th class="subtotal_th">Net Subtotal (£)</th>
-            </tr>
-          </thead>
-          <tbody id="invoice_items">
-            {% set idx = 0 %}
-            {% set row_class = cycler('odd', 'event') %}
-            {% for item in invoice.invoice_items %}
-              {% include 'invoice/_item.html' %}
-              {% set idx = idx + 1 %}
-            {% endfor %}
-          </tbody>
-          <tfoot>
-            {% include 'invoice/_footer.html' %}
-          </tfoot>
-        </table>
-
-        {% include 'invoice/_other.html' %}
-
-        <div class="clearfix"></div>
       </div>
+      <div id="invoice-info">
+        {% include 'invoice/_info.html' %}
+      </div>
+      <div class="vcard" id="client-details">
+        {% include 'invoice/_contact.html' %} 
+      </div>
+    
+      <table id="invoice-amount">
+        <thead>
+          <tr id="header_row">
+            <th class="quantity_th">Quantity</th>
+            <th class="left details_th">Details</th>
+            <th class="unitprice_th">Unit Price (£)</th>
+            <th class="salestax_th">Tax</th>
+            <th class="subtotal_th">Net Subtotal (£)</th>
+          </tr>
+        </thead>
+        <tbody id="invoice_items">
+          {% set idx = 0 %}
+          {% set row_class = cycler('odd', 'event') %}
+          {% for item in invoice.invoice_items %}
+            {% include 'invoice/_item.html' %}
+            {% set idx = idx + 1 %}
+          {% endfor %}
+        </tbody>
+        <tfoot>
+          {% include 'invoice/_footer.html' %}
+        </tfoot>
+      </table>
+
+      {% include 'invoice/_other.html' %}
+
+      <div class="clearfix"></div>
     </div>
   </div>
+</div>
+
+{% if invoice.payments|length > 0 %}
+<div class="workspace-inner">
+  <h4>Payments</h4>
+  <table class="table table-striped table-hover data-list">
+      <thead class='data-list-header'>
+        <tr>
+          <th>Payment date</th>
+          <th>Invoice</th>
+          <th>Due Date</th>
+          <th>Client</th>
+          <th>Method</th>
+          <th>Amount</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody class='data-list'>
+      {% for payment in invoice.payments %}
+        <tr>
+          <td>{{ payment.date.strftime('%d %b %Y') }}</td>
+          <td><a href="{{ url_for('invoice.show', id=payment.invoice_id) }}">{{ payment.invoice.reference }}</td>
+          <td>{{ payment.invoice.due_date.strftime('%d %b %Y') }}</td>
+          <td>{{ payment.invoice.contact.full_name() }}</td>
+          <td>{{ payment.description }}</td>
+          <td>{{ payment.amount|format_currency }} {{ payment.currency_code }}</td>
+          <td>
+            {% if payment.method == 'manual' %}
+              <a class="btn btn-mini" href="{{ url_for('payment.edit', id=payment.id) }}">Edit</a>
+              <a class="btn btn-danger btn-mini" href="{{ url_for('payment.delete', id=payment.id) }}">Delete</a>
+            {% endif %}
+          </td>
+        </tr>
+      {% endfor %}
+      </tbody>
+  </table>
+</div>
+{% endif %}
 
 <script type="text/javascript">
   var view = new DraftInvoiceView({
