--- a/nano/templates/payment/edit.html
+++ b/nano/templates/payment/edit.html
@@ -1,23 +1,28 @@
 {% extends 'layout.html' %}
 {% from 'macros/_misc.html' import render_input %}
 {% block content %}
-  
-  {% include 'invoice/_controls.html' %}
-  
+
+{% include 'invoice/_controls.html' %}
+
   <div class="workspace-inner">
 
     <form class="form form-horizontal create inline invoice" method="post" action="{{ url_for('payment.create', invoice_id=invoice.id) }}">
       <div class="header">Add payment</div>
       <div class="fields">
+        <p>You cannot make changes to this payment, as it is not a manual payment</p>
         {{ form.csrf_token }}
+        {% if payment.method != 'manual' %}
 
-
-        {{ render_input(form.amount) }}
-        {{ render_input(form.description) }}
-        {{ render_input(form.date) }}
-
+          {{ render_input(form.amount, readonly=1) }}
+          {{ render_input(form.description, readonly=1) }}
+          {{ render_input(form.date, readonly=1) }}
+        {% else %}
+          {{ render_input(form.amount) }}
+          {{ render_input(form.description) }}
+          {{ render_input(form.date) }}
+        {% endif %}
         <div class="field">
-          <button class="button normal" type="submit">Add payment</button>
+          <button class="button normal" type="submit">Update payment</button>
            or 
           <a href="javascript:history.back(-1);">Cancel</a>
         </div>
@@ -32,7 +37,5 @@
       var picker1 = new Pikaday({ field: document.getElementById('date'), format: dateFormat });
     });
   </script>
-
-
 
 {% endblock %}
