--- a/nano/templates/invoice/email.html
+++ b/nano/templates/invoice/email.html
@@ -3,6 +3,12 @@
 {% block content %}
   
   {% include 'invoice/_controls.html' %}
+  
+  <ul class="breadcrumb">
+    <li><a href="{{ url_for('invoice.index') }}">Invoices</a> <span class="divider">/</span></li>
+    <li><a href="{{ url_for('invoice.show', id=invoice.id) }}">Invoice {{ invoice.reference }}</a> <span class="divider">/</span></li>
+    <li class="active">Email</li>
+  </ul>
 
   <div class="workspace-inner">
     <form class="inline email create" method="post" action="{{ url_for('invoice.email', id=invoice.id) }}">
