--- a/nano/templates/account/signup.html
+++ b/nano/templates/account/signup.html
@@ -1,23 +1,33 @@
-{% from "macros/_misc.html" import render_input, render_action %}
+{% from "macros/_misc.html" import render_input %}
 
-{% set page_title = _('Sign up to fbone') %}
+{% set page_title = _('Sign up') %}
 
-{% extends 'layout.html' %}
+{% extends 'public.html' %}
 
 {% block content %}
-<div class='span12'>
-    <form class='form-stacked' method="POST" action="{{ url_for('account.signup') }}">
-        {{ form.hidden_tag() }}
-        {{ form.next }}
-        <fieldset>
-            <legend>Already have account? <a href="{{ url_for('account.login') }}">Login</a> please.</legend>
-            {{ render_input(form.name, 'xlarge') }}
-            {{ render_input(form.email, 'xlarge') }}
-            {{ render_input(form.password, 'xlarge') }}
-            {{ render_input(form.password_again, 'xlarge') }}
-            {{ render_action(form.submit) }}
-        </fieldset>
+
+  <div class="workspace-inner">
+
+    <h1>Create new account</h1>
+
+    <form method="post" action="">
+       {{ form.hidden_tag() }}
+       {{ form.next }}
+      
+      {{ render_input(form.name, 'xlarge') }}
+      {{ render_input(form.email, 'xlarge') }}
+      {{ render_input(form.password, 'xlarge') }}
+      {{ render_input(form.password_again, 'xlarge') }}
+      
+      <div class="form-actions">
+        <button type="submit" class="btn btn-primary">Signup</button>
+      </div>
+
     </form>
-</div>
+  </div>
+
+
+
+
 {% endblock %}
 
