--- a/nano/templates/client/show.html
+++ b/nano/templates/client/show.html
@@ -40,26 +40,29 @@
     </form>
 
     {% if invoices|length > 0 %}
-    <div class="data-list-wrapper invoice-data-list client-invoices"> 
-      <div class="data-list-header">
-        <div class="col due">Due date</div>
-        <div class="col ref">Reference No.</div>
-        <div class="col name">Client</div>
-        <div class="col total">Total</div>
-        <div class="col status">Status</div>
-      </div>
-      <div class="data-list">
+      <h4>Invoices</h4>
+      <table class='table table-striped table-hover data-list'>
+        <thead class='data-list-header'>
+          <tr>
+            <th class="col due">Due date</th>
+            <th class="col ref">Reference No.</th>
+            <th class="col name">Client</th>
+            <th class="col total">Total</th>
+            <th class="col status">Status</th>
+          </tr>
+        </thead>
+        <tbody>
         {% for invoice in invoices %}
-          <div class="row" data-id="{{ invoice.id }}">
-            <div class="col due">{{ invoice.due_date.strftime('%d %B %Y') }}</div>
-            <div class="col ref">{{ invoice.reference }}</div>
-            <div class="col name">{{ invoice.contact.first_name }} {{ invoice.contact.last_name }}</div>
-            <div class="col total"><span class='currency-code'>{{ invoice.currency_code }}</span> {{ invoice.total|format_currency }}</div>
-            <div class="col status"><span class='label label-{{ invoice.get_status() }}'>{{ invoice.get_status() }}</span></div>
-          </div>
+          <tr data-id="{{ invoice.id }}">
+            <td class="due">{{ invoice.due_date.strftime('%d %B %Y') }}</td>
+            <td class="ref">{{ invoice.reference }}</td>
+            <td class="name">{{ invoice.contact.first_name }} {{ invoice.contact.last_name }}</td>
+            <td class="total"><span class='currency-code'>{{ invoice.currency_code }}</span> {{ invoice.total|format_currency }}</td>
+            <td class="status"><span class='label label-{{ invoice.get_status() }}'>{{ invoice.get_status() }}</span></td>
+          </tr>
         {% endfor %}
-      </div>
-    </div>
+        </tbody>
+      </table>
     {% endif %}
 
 
