--- a/nano/templates/invoice/index.html
+++ b/nano/templates/invoice/index.html
@@ -11,7 +11,7 @@
     
   {% else %}
     <div class="workspace-inner">
-    <table class="table table-striped table-hover data-list">
+    <table class="table table-striped table-hover data-list invoice-data-list">
       <thead class="data-list-header">
         <td class="col due">Due date</td>
         <td class="col ref">Reference No.</td>
@@ -24,7 +24,7 @@
           <tr data-id="{{ invoice.id }}">
             <td class="col due">{{ invoice.due_date.strftime('%d %B %Y') }}</td>
             <td class="col ref">{{ invoice.reference }}</td>
-            <td class="col name">{{ invoice.contact.first_name }} {{ invoice.contact.last_name }}</td>
+            <td class="col name">{{ invoice.contact.full_name() }} <br> <span class="org"><b>Company:</b> {{ invoice.contact.organisation|default('No organisation', True) }}</span></td>
             <td class="col total"><span class='currency-code'>{{ invoice.currency_code }}</span> {{ invoice.total|format_currency }}</td>
             <td class="col status"><span class='label label-{{ invoice.get_status() }}'>{{ invoice.get_status() }}</span></td>
           </tr>
