--- a/nano/templates/payment/create.html
+++ b/nano/templates/payment/create.html
@@ -3,7 +3,12 @@
 {% block content %}
   
   {% include 'invoice/_controls.html' %}
-  
+  <ul class="breadcrumb">
+    <li><a href={{ url_for('invoice.index') }}"">Invoices</a> <span class="divider">/</span></li>
+    <li><a href="{{ url_for('invoice.show', id=invoice.id) }}">Invoice {{ invoice.reference }}</a> <span class="divider">/</span></li>
+    <li class="active">Add payment</li>
+  </ul>
+
   <div class="workspace-inner">
 
     <form class="form form-horizontal create inline invoice" method="post" action="{{ url_for('payment.create', invoice_id=invoice.id) }}">
