--- a/nano/templates/payment/edit.html
+++ b/nano/templates/payment/edit.html
@@ -3,13 +3,17 @@
 {% block content %}
 
 {% include 'invoice/_controls.html' %}
+<ul class="breadcrumb">
+  <li><a href="#">Invoices</a> <span class="divider">/</span></li>
+  <li><a href="{{ url_for('invoice.show', id=invoice.id) }}">Invoice {{ invoice.reference }}</a> <span class="divider">/</span></li>
+  <li class="active">Update payment</li>
+</ul>
 
   <div class="workspace-inner">
 
     <form class="form form-horizontal create inline invoice" method="post" action="{{ url_for('payment.create', invoice_id=invoice.id) }}">
-      <div class="header">Add payment</div>
+      <div class="header">Update payment</div>
       <div class="fields">
-        <p>You cannot make changes to this payment, as it is not a manual payment</p>
         {{ form.csrf_token }}
         {% if payment.method != 'manual' %}
 
