--- a/nano/static/src/sass/_layout.scss
+++ b/nano/static/src/sass/_layout.scss
@@ -34,6 +34,10 @@ body, html * {
       text-decoration: none;
       color: #fff;
     }
+
+    a:hover {
+      text-decoration: underline;
+    }
   }
 }
 
