--- a/nano/templates/client/show.html
+++ b/nano/templates/client/show.html
@@ -2,14 +2,11 @@
 {% from 'macros/_misc.html' import render_input %}
 
 {% block content %}
-  
-  <div class="filters">
-    <div class="left">
-      <a href="{{ url_for('.create') }}"><img src="/static/img/plus.png"> Add client</a>
-    </div>
-    <div class="right">
-    </div>
-  </div>
+
+ <ul class="breadcrumb">
+    <li><a href="{{ url_for('client.index') }}">Clients</a> <span class="divider">/</span></li>
+    <li class="active">{{ contact.full_name() }} - {{ contact.organisation }}</li>
+  </ul>
   
   <div class="workspace-inner">
 
