--- a/nano/templates/home/dashboard.html
+++ b/nano/templates/home/dashboard.html
@@ -7,11 +7,66 @@
   <div class="dashboard">
     <div class='card' id='graph' style='min-width: 400px; height: 240px; margin: 0 0'>
     </div>
+  </div>
     
     <div class='row'>
+        <div class="span5">
+          <div class="workspace-inner">
+            <h4>Last 5 payments</h4>
 
+            <table class="table table-striped table-hover table-condensed data-list" style='font-size: 12px;'>
+              <thead class='data-list-header'>
+                <tr>
+                  <th>Date</th>
+                  <th>Invoice</th>
+                  <th>Client</th>
+                  <th>Method</th>
+                  <th>Amount</th>
+                </tr>
+              </thead>
+              <tbody class=''>
+              {% for payment in payments %}
+                <tr>
+                  <td>{{ payment.date|fmt_date }}</td>
+                  <td><a href="{{ url_for('invoice.show', id=payment.invoice_id) }}">{{ payment.invoice.reference }}</td>
+                  <td>{{ payment.invoice.contact.full_name() }}</td>
+                  <td>{{ payment.description }}</td>
+                  <td>{{ payment.amount|format_currency }} {{ payment.currency_code }}</td>
+                </tr>
+              {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="span6">
+          <div class="workspace-inner">
+            <h4>Last 5 invoices</h4>
+
+            <table class="table table-striped table-hover table-condensed data-list" style='font-size: 12px;'>
+              <thead class="data-list-header">
+                <th class="col due">Due</th>
+                <th class="col ref">Reference</th>
+                <th class="col name">Client</th>
+                <th class="col total">Total</th>
+                <th class="col status">Status</th>
+              </thead>
+             <tbody>
+              {% for invoice in invoices %}
+                  <tr data-id="{{ invoice.id }}">
+                    <td class="col due">{{ invoice.due_date|fmt_date }}</td>
+                    <td class="col ref"><a href="{{ url_for('invoice.show', id=invoice.id) }}">{{ invoice.reference }}</td>
+                    <td class="col name">{{ invoice.contact.full_name() }} <br> <span class="org"><b>Company:</b> {{ invoice.contact.organisation|default('No organisation', True) }}</span></td>
+                    <td class="col total"><span class='currency-code'>{{ invoice.currency_code }}</span> {{ invoice.total|format_currency }}</td>
+                    <td class="col status"><span class='label label-{{ invoice.get_status() }}'>{{ invoice.get_status() }}</span></td>
+                  </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+
+        </div>
     </div>
-  </div>
 
   <script type="text/javascript">
     function renderChart(categories, series) {
