--- a/nano/static/src/sass/_layout.scss
+++ b/nano/static/src/sass/_layout.scss
@@ -18,6 +18,10 @@ body, html * {
   }
 }
 
+.container {
+  padding-bottom: 3em;
+}
+
 .header { 
   background-color: auto; 
   padding: 5px 0 10px 0;
